--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -16,9 +16,9 @@
         android:text="@string/button1"
         android:textColor="#a9a9a9"
         android:textSize="25sp" />
-    
-   	
-    
+
+
+
     <ImageView
 	    android:id="@+id/club"
 	    android:layout_width="80dp"
@@ -27,7 +27,7 @@
 	    android:layout_alignParentLeft="true"
 	    android:layout_marginBottom="20dp"
 	    android:src="@drawable/clublogo" />
-    
+
 	<ImageView
 	    android:id="@+id/img"
 	    android:layout_width="wrap_content"
@@ -45,6 +45,16 @@
 	    android:background="#00ff0000"
 	    />
 
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignTop="@+id/club"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="10dp"
+		android:background="#00ff0000"
+		android:text="@string/privacy"
+		android:textColor="#a9a9a9"
+		android:id="@+id/privacy" />
 
 
 </RelativeLayout>
